--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Orders</title>
+  <title>Login</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -22,15 +22,15 @@
           </div>
         {% endif %}
         <form class="w-100" method="post">
-          <label for="email" class="form-label">User Email</label>
+          <label for="email" class="form-label">Email</label>
           <div class="input-group mb-3">
             <input type="email" name="email" id="email"class="form-control" placeholder="Your email here" aria-label="Email" aria-describedby="basic-addon1" />
           </div>
-          <label for="password" class="form-label">User Password</label>
+          <label for="password" class="form-label">Password</label>
           <div class="input-group mb-3">
             <input type="password" name="password" id="password"class="form-control" placeholder="Your password here" aria-label="Password" aria-describedby="basic-addon1" />
           </div>
-          <button class="btn btn-primary w-100"> Login</button>
+          <button class="btn btn-primary w-100"> Login </button>
         </form>
       </div>
     </div>
