--- a/frontend/templates/orders.html
+++ b/frontend/templates/orders.html
@@ -27,7 +27,7 @@
           </div>
           <div class="d-flex justify-content-between">
             <div class="d-flex">
-              <h5 class="font-weight-bold mx-2">Order by:</h5>
+              <h5 class="font-weight-bold mx-2">Order:</h5>
               <div class="form-check mx-2">
                 <input class="form-check-input" type="radio" name="orderby" id="total" value="total" checked>
                 <label class="form-check-label" for="total">Total</label>
